# codigodji

./: .gitignore  pyproject.toml
src/codigodji/: main.py
